volume slider position fixed, custom class now in its own file so listening session ui can use it without the code being written twice

--- a/src/kv_style/tab2.kv
+++ b/src/kv_style/tab2.kv
@@ -19,6 +19,7 @@
                 text: 'Volume'
                 color: [0,0,0,1]
 
+            # widgets with these properties are now created programmatically in tab2.py
             # Slider:
             #    id: volume_slider
             #    min: 0
@@ -27,10 +28,10 @@
             #    value: 50
             #    on_value: root.volume(volume_slider.value)
 
-            Label:
-                id: volume_label
-                text: f'Volume: 50'
-                color: [0,0,0,1]
+            # Label:
+            #    id: volume_label
+            #    text: f'Volume: 50'
+            #    color: [0,0,0,1]
         FloatLayout:
             id: player_window
             size_hint: None, None
