--- a/src/kv_style/ls_tab3.kv
+++ b/src/kv_style/ls_tab3.kv
@@ -17,7 +17,7 @@
             AnchorLayout:
                 anchor_x: 'left'  # Aligns children to the left
                 anchor_y: 'top'
-                size_hint: None, None
+                size_hint: None, .5
                 size: self.parent.width - dp(60), dp(150)
                 padding: dp(10)
                 canvas.before:
@@ -32,7 +32,7 @@
                         width: dp(1)
                         rectangle: self.x, self.y, self.width, self.height
                 Label:
-                    id: friend_list
+                    id: accs_list
                     size_hint: None, None
                     size: self.texture_size
                     text: "<loading>"
@@ -43,48 +43,24 @@
                     orientation: 'vertical'
                     spacing: dp(10)
                     BoxLayout:
-                        orientation: 'vertical'
-                        spacing: dp(5)
+                        orientation: 'horizontal'
+                        spacing: dp(1)
                         TextInput:
                             # id: friend_input
                             size_hint: None, None
                             size: dp(150), dp(30)
                             multiline: False
                             hint_text: 'Username'
-                        BoxLayout:
-                            size_hint: None, None
-                            size: dp(150), dp(10)
                         Button:
                             text: 'Send Friend Request'
                             size_hint: None, None
                             size: dp(150), dp(30)
                             background_color:[0,1,0,1]
                             # on_press: root.invite_friend(friend_input.text)
-                        BoxLayout:
-                            # id: blank_space
-                            orientation: 'vertical'
                     BoxLayout:
-                        orientation: 'vertical'
+                        orientation: 'horizontal'
                         size_hint_x: None
                         width: self.minimum_size[0]
-                        BoxLayout:
-                            id: dropdown_box
-                            canvas.before:
-                                Color:
-                                    rgba: 1, 1, 1, 1  # White color
-                                Rectangle:
-                                    pos: self.pos
-                                    size: self.size
-                            orientation: 'vertical'
-                            size_hint: None, None
-                            size: self.minimum_size
-                            Button:
-                                text: 'Pending Invites'
-                                size_hint: None, None
-                                size: dp(150), dp(50)
-                                background_color: (0.1, 0.1, 0.1, 1)
-                                on_press:
-                                    # root.toggle_dropdown()
                         BoxLayout:
                             id: blank_space
                             orientation: 'vertical'
@@ -154,9 +130,9 @@
 
     Button:
         size_hint: (None, None)
-        size: (130, 30)
+        size: dp(150), dp(30)
         text: 'Leave'
-        pos_hint: {'x': 0.01, 'y': 0.09}
+        pos_hint: {'x': 0.01, 'y': 0.01}
         background_color:[0,1,0,1]
         on_press:
             root.manager.transition.direction = 'up'
