--- a/src/kv_style/tab1.kv
+++ b/src/kv_style/tab1.kv
@@ -1,96 +1,149 @@
 <Tab1>
-    RelativeLayout:
+    BoxLayout:
+        orientation: 'vertical'
+        padding: dp(30)
         Label:
             id: welcome_label
-            font_size: 30
+            font_size: dp(30)
             bold: True
             text: 'Welcome!'
-            pos_hint: {'center_y': 0.90}
+            size_hint_y: None
+            height: self.texture_size[1]
             color: [1, 1, 1, 1]
-
+        FloatLayout:
+            Button:
+                id: create_session
+                size_hint: None, None
+                size: dp(200), dp(75)
+                pos_hint: {'center_x': 0.3, 'center_y': 0.5}
+                text: 'Create Session'
+                background_color: 0, 1, 0, 1
+                on_press: root.create_session(True)
+            Button
+                id: join_session
+                size_hint: None, None
+                size: dp(200), dp(75)
+                pos_hint: {'center_x': 0.7, 'center_y': 0.5}
+                text: 'Join Session'
+                background_color: 0, 1, 0, 1
+    FloatLayout:
+        id: create_session_window
+        pos_hint: {'center_x': -0.5}
+        canvas.before:
+            Color:
+                rgba: 0, 0, 0, 0.5
+            Rectangle:
+                pos: self.pos
+                size: self.size
         BoxLayout:
-            id: 'box_layout'
             orientation: 'vertical'
+            size_hint: (None, None)
+            size: (dp(250), dp(300))
+            pos_hint: {'center_x': 0.5, 'center_y': 0.5}
+            padding: dp(10)
+            spacing: dp(10)
+            canvas.before:
+                Color:
+                    rgba: 1, 1, 1, 1
+                RoundedRectangle:
+                    pos: self.pos
+                    size: self.size
+                    radius: [dp(10), dp(10), dp(10), dp(10)]
+            FloatLayout:
+                size_hint: None, None
+                size: dp(250), dp(25)
+                Label:
+                    text: 'Create a Session'
+                    color: [0,0.4,0,1]
+                    font_size: dp(20)
+                    bold: True
+                    size_hint: None, None
+                    size: self.texture_size
+                    pos_hint: {'center_x': 0.5, 'center_y': 0.5}
+                Button:
+                    size_hint: None, None  # Disable the x-size hint
+                    size: dp(20), dp(20)  # Set the width in dp (adjust as needed)
+                    pos_hint: {'center_x': 0.92, 'center_y': 0.9}
+                    background_color: 0, 0, 0, 0
+                    on_press: root.create_session(False)
+                    Image:
+                        source: '../other/images/exit_icon.png'
+                        center: self.parent.center
+                        size: self.parent.height * 0.5, self.parent.height * 0.5
+            Label:
+                text: 'Room code:'
+                color: 0, 0, 0, 1
+                size_hint: None, None
+                size: self.texture_size
+            TextInput:
+                id: room_code_input
+                size_hint_y: None
+                height: dp(30)
+                multiline: False
+                hint_text: 'Code'
+                write_tab: False
+            Label:
+                text: 'Listen with:'
+                color: 0, 0, 0, 1
+                size_hint: None, None
+                size: self.texture_size
+            ScrollView:
+                size_hint_y: None
+                height: dp(75)
+                scroll_wheel_distance: dp(20)
+                bar_width: dp(4)
+                bar_margin: dp(4)
+                do_scroll_x: False
+                do_scroll_y: True
+                canvas.before:
+                    Color:
+                        rgba: 0, 0, 0, 1  # Red color for the border
+                    Line:
+                        rectangle: self.x, self.y, self.width, self.height
+                        width: 1
 
-            AnchorLayout:
-                anchor_x: 'center'
-                anchor_y: 'center'
+                GridLayout:
+                    id: scroll_contents
+                    cols: 1
+                    spacing: dp(1)
+                    size_hint_y: None
+                    height: self.minimum_height
+            Button:
+                size_hint: (None, None)
+                size: (dp(130), dp(30))
+                pos_hint: {'center_x': 0.5}
+                text: 'Create Session'
+                background_color:[0,1,0,1]
+            BoxLayout:
+                id: blank_space
 
-                BoxLayout:
-                    orientation: 'vertical'
-                    size_hint: (None, None)
-                    size: (250, 250)
-                    canvas.before:
-                        Color:
-                            rgba: 1, 1, 1, 1
-                        RoundedRectangle:
-                            pos: self.pos
-                            size: self.size
-                            radius: [10, 10, 10, 10]
+<Option>:
+    orientation: 'horizontal'
+    size_hint_y: None
+    height: dp(25)
+    padding: dp(10)
+    Label:
+        id: option_label
+        text: ''
+        color: 0, 0, 0, 1
+        opacity: 0.4
+        size_hint: None, None
+        width: self.texture_size[0]
+        pos_hint: {'center_y': 0.5}
+    BoxLayout:
+        id: blank_space
+    Button:
+        size_hint: None, None  # Disable the x-size hint
+        size: dp(25), dp(25)  # Set the width in dp (adjust as needed)
+        pos_hint: {'center_y': 0.5}
+        background_color: 0, 0, 0, 0
 
-                    Label:
-                        text: 'Enter Session.'
-                        color: [0,0.4,0,1]
-                        font_size: 20
-                        bold: True
-                    BoxLayout:
-                        padding: 10
+        on_press:
+            root.add(self.parent.ids.option_label.text)
 
-                        TextInput:
-                            id: session_input
-                            multiline: False
-                            hint_text: '(Session)'
+        Image:
+            id: add_image
+            source: '../other/images/accept_icon.png'
+            center: self.parent.center
+            size: self.parent.height * 0.6, self.parent.height * 0.6
 
-                    Button:
-                        size_hint: (None, None)
-                        size: (130, 30)
-                        text: 'Join'
-                        background_color:[0,1,0,1]
-                        pos_hint: {'x': 0.25, 'y': 20.01}
-                        on_press:
-                            root.manager.transition.direction = 'down'
-                            root.submit(session_input.text, 'Join')
-
-                    Button:
-                        size_hint: (None, None)
-                        size: (130, 30)
-                        text: 'Create'
-                        background_color:[0,1,0,1]
-                        pos_hint: {'x': 0.25, 'y': 2.91}
-                        on_press:
-                            root.manager.transition.direction = 'down'
-                            root.submit(session_input.text, 'Create')
-
-                    Label:
-                        id: error_message
-                        text: ''
-                        color: [1,0,0,0]
-
-            # Button:
-            #     text: 'Devices'
-            #     size_hint: None, None
-            #     on_release: root.open_dropdown(self)
-            #     size_hint: (None, None)
-            #     size: (dp(110), dp(50))
-
-            # DropDown:
-            #     id: dropdown
-            #     on_select: root.select_option(args[1])
-
-            #     Button:
-            #         text: 'Device 1'
-            #         size_hint_y: None
-            #         height: 44
-            #         on_release: dropdown.select(self.text)
-
-            #     Button:
-            #         text: 'Device 2'
-            #         size_hint_y: None
-            #         height: 44
-            #         on_release: dropdown.select(self.text)
-
-            #     Button:
-            #         text: 'Device 3'
-            #         size_hint_y: None
-            #         height: 44
-            #         on_release: dropdown.select(self.text)
