--- a/src/kv_style/ls_tab3.kv
+++ b/src/kv_style/ls_tab3.kv
@@ -95,14 +95,15 @@
                         width: dp(1)
                         rectangle: self.x, self.y, self.width, self.height
                 ScrollView:
-                    height: dp(150)
+                    size_hint_y: None
+                    height: dp(135) # 35
+                    scroll_wheel_distance: dp(2)
+                    bar_margin: dp(10)
+                    bar_width: dp(10)
                     do_scroll_x: False
                     do_scroll_y: True
-                    bar_margin: dp(25)
-                    bar_width: dp(20)
-                    scroll_y: 10
-                    scroll_wheel_distance: dp(20)
-                    # size_hint_y: None
+                    scroll_y: dp(20)
+                    scroll_type: ['bars']
                     canvas.before:
                         Color:
                             rgba: 0, 1, 0, 1  # Red color for the border
@@ -111,36 +112,42 @@
                             width: 1
                     Label:
                         id: song_info
+                        # height: dp(100)
                         size_hint: None, None
-                        size: self.parent.width - dp(50), dp(50)
+                        size: self.parent.width, dp(135)
                         text_size: self.width, None
                         text: "<loading>"
+                        valign: 'top'
+                        # halign: 'left'
                         canvas.before:
                             Color:
-                                rgba: 0, 0, 1, 1
+                                rgba: 1, 0, 0, 1
+                            Line:
+                                rectangle: self.x, self.y, self.width, self.height
+                                width: 1
             AnchorLayout:
                 anchor_x: 'center'  # Aligns children to the left
                 anchor_y: 'top'
                 BoxLayout:
-                    id: account_management
-                    orientation: 'vertical'
-                    size_hint_x: None
-                    width: self.minimum_size[0]
-                    spacing: dp(5)
-                    Button:
-                        text: 'Edit Account Info'
-                        size_hint: None, None
-                        size: dp(150), dp(30)
-                        background_color:[0,1,0,1]
-                        on_press:
+                    # id: account_management
+                    # orientation: 'vertical'
+                    # size_hint_x: None
+                    # width: self.minimum_size[0]
+                    # spacing: dp(5)
+                    # Button:
+                        # text: 'Edit Account Info'
+                        # size_hint: None, None
+                        # size: dp(150), dp(30)
+                        # background_color:[0,1,0,1]
+                        # on_press:
                             # root.parent.parent.parent.parent.transition.direction = 'up'
                             # root.parent.parent.parent.parent.current = 'add_account_info_page'
-                    Button:
-                        text: 'Change Password'
-                        size_hint: None, None
-                        size: dp(150), dp(30)
-                        background_color:[0,1,0,1]
-                        on_press:
+                    # Button:
+                        # text: 'Change Password'
+                        # size_hint: None, None
+                        # size: dp(150), dp(30)
+                        # background_color:[0,1,0,1]
+                        # on_press:
                             # root.parent.parent.parent.parent.transition.direction = 'up'
                             # root.parent.parent.parent.parent.current = 'change_password_page'
                     BoxLayout:
