modified song color in song history for if a song had more likes or dislikes or the same

--- a/src/kv_style/ls_tab3.kv
+++ b/src/kv_style/ls_tab3.kv
@@ -39,6 +39,7 @@
                     text: ""
                     valign: 'top'
                     halign: 'left'
+                    markup: True
                     canvas.before:
                         Color:
                             rgba: 0, 0, 0, 1
@@ -129,6 +130,7 @@
                         text: ""
                         valign: 'top'
                         halign: 'left'
+                        markup: True
                         canvas.before:
                             Color:
                                 rgba: 0, 0, 0, 1
