--- a/src/kv_style/ls_tab3.kv
+++ b/src/kv_style/ls_tab3.kv
@@ -4,7 +4,7 @@
         BoxLayout:
             orientation: 'vertical'
             padding: dp(30)
-            spacing: dp(10)
+            spacing: dp(5)
             AnchorLayout:
                 anchor_x: 'left'
                 size_hint: None, None
@@ -46,34 +46,34 @@
                         Line:
                             rectangle: self.parent.x, self.parent.y, self.width, self.height
                             width: 1
-            AnchorLayout:
-                anchor_x: 'center'  # Aligns children to the left
-                anchor_y: 'top'
+            BoxLayout:
+                orientation: 'vertical'
+                # spacing: dp(10)
                 BoxLayout:
-                    orientation: 'vertical'
-                    spacing: dp(10)
+                    orientation: 'horizontal'
+                    spacing: dp(1)
                     BoxLayout:
-                        orientation: 'horizontal'
-                        spacing: dp(1)
-                        TextInput:
-                            # id: friend_input
-                            size_hint: None, None
-                            size: dp(150), dp(30)
-                            multiline: False
-                            hint_text: 'Username'
-                        Button:
-                            text: 'Send Friend Request'
-                            size_hint: None, None
-                            size: dp(150), dp(30)
-                            background_color:[0,1,0,1]
-                            # on_press: root.invite_friend(friend_input.text)
+                        id: blank_space
+                        orientation: 'vertical'
+                    TextInput:
+                        id: friend_input
+                        size_hint: None, None
+                        size: dp(150), dp(30)
+                        multiline: False
+                        hint_text: 'Username'
+                    Button:
+                        text: 'Send Friend Request'
+                        size_hint: None, None
+                        size: dp(150), dp(30)
+                        background_color:[0,1,0,1]
+                        on_press: root.send_friend_request(friend_input.text)
+                BoxLayout:
+                    orientation: 'horizontal'
+                    size_hint_x: None
+                    width: self.minimum_size[0]
                     BoxLayout:
-                        orientation: 'horizontal'
-                        size_hint_x: None
-                        width: self.minimum_size[0]
-                        BoxLayout:
-                            id: blank_space
-                            orientation: 'vertical'
+                        id: blank_space
+                        orientation: 'vertical'
         BoxLayout:
             orientation: 'vertical'
             padding: dp(30)
@@ -165,11 +165,31 @@
                     BoxLayout:
                         id: blank_space
                         orientation: 'vertical'
-
+    BoxLayout:
+        id: error_window
+        size_hint: None, None
+        size: self.minimum_size[0], dp(40)
+        pos: -self.minimum_size[0], dp(350)
+        opacity: 0
+        padding: dp(10)
+        canvas.before:
+            Color:
+                rgba: 1, 1, 1, 1
+            RoundedRectangle:
+                pos: self.pos
+                size: self.size
+                radius: [5, 5, 5, 5]
+        Label:
+            id: window_message
+            text: ''
+            color: (0, 0, 0, 1)
+            size_hint: None, None
+            size: self.texture_size[0], dp(20)
+            center: self.parent.center
     Button:
         size_hint: (None, None)
         size: dp(150), dp(30)
-        text: 'Leave'
+        text: 'Leave Session'
         pos_hint: {'x': 0.01, 'y': 0.01}
         background_color:[0,1,0,1]
         on_press:
