--- a/src/kv_style/tab1.kv
+++ b/src/kv_style/tab1.kv
@@ -133,8 +133,8 @@
     BoxLayout:
         id: blank_space
     Button:
-        size_hint: None, None  # Disable the x-size hint
-        size: dp(25), dp(25)  # Set the width in dp (adjust as needed)
+        size_hint: None, None
+        size: dp(25), dp(25)
         pos_hint: {'center_y': 0.5}
         background_color: 0, 0, 0, 0
 
