--- a/src/kv_style/login.kv
+++ b/src/kv_style/login.kv
@@ -1,5 +1,6 @@
 #:kivy 2.3.0
 # create_account.kv
+#:import HoverableButton src.kv_screens.hoverablebutton
 
 <LoginScreen>:
     Image:
@@ -63,7 +64,8 @@
                     anchor_x: 'center'
                     anchor_y: 'center'
 
-                    Button:
+                    HoverableButton:
+                        id: login_submit_button
                         size_hint: (None, None)
                         size: (dp(130), dp(30))
                         text: 'Enter'
@@ -76,7 +78,7 @@
                     text: ''
                     color: [1,0,0,0]
 
-        Button:
+        HoverableButton:
             size_hint: (None, None)
             size: (dp(130), dp(30))
             text: 'Create Account'
