--- a/src/kv_style/add_account_info.kv
+++ b/src/kv_style/add_account_info.kv
@@ -1,4 +1,5 @@
 # create_account.kv
+#:import HoverableButton src.kv_screens.hoverablebutton
 
 <AddAccountInfo>:
     AnchorLayout:
@@ -56,7 +57,7 @@
                 anchor_x: 'center'
                 anchor_y: 'center'
 
-                Button:
+                HoverableButton:
                     size_hint: (None, None)
                     size: (dp(130), dp(30))
                     text: 'Update Info'
@@ -69,7 +70,7 @@
                 text: ''
                 color: [1,0,0,0]
 
-    Button:
+    HoverableButton:
         size_hint: (None, None)
         size: (dp(100), dp(30))
         text: 'Add Later'
