--- a/src/kv_style/change_password.kv
+++ b/src/kv_style/change_password.kv
@@ -1,3 +1,5 @@
+#:import HoverableButton src.kv_screens.hoverablebutton
+
 <ChangePassword>:
     AnchorLayout:
         anchor_x: 'center'
@@ -42,7 +44,7 @@
                 anchor_x: 'center'
                 anchor_y: 'center'
 
-                Button:
+                HoverableButton:
                     size_hint: (None, None)
                     size: (dp(130), dp(30))
                     text: 'Update Password'
@@ -55,7 +57,7 @@
                 text: ''
                 color: [1,0,0,0]
 
-    Button:
+    HoverableButton:
         size_hint: (None, None)
         size: (dp(100), dp(30))
         text: 'Cancel'
