--- a/src/kv_style/create_account.kv
+++ b/src/kv_style/create_account.kv
@@ -1,4 +1,5 @@
 # create_account.kv
+#:import HoverableButton src.kv_screens.hoverablebutton
 
 <CreateAccount>:
     AnchorLayout:
@@ -70,7 +71,7 @@
                 text: ''
                 color: [1,0,0,0]
 
-    Button:
+    HoverableButton:
         size_hint: (None, None)
         size: (dp(100), dp(30))
         text: 'Go Back'
