--- a/src/kv_style/listening_session.kv
+++ b/src/kv_style/listening_session.kv
@@ -1,4 +1,5 @@
 #:kivy 2.3.0
+#:import HoverableButton src.kv_screens.hoverablebutton
 
 <ListeningSessionScreen>:
     Image:
@@ -21,7 +22,7 @@
         pos_hint: {'x': 0.65, 'y': 0.09}
         bold: True
 
-    Button:
+    HoverableButton:
         size_hint: (None, None)
         size: (130, 30)
         text: 'Leave'
