--- a/src/kv_style/ls_tab1.kv
+++ b/src/kv_style/ls_tab1.kv
@@ -1,6 +1,8 @@
+#:import HoverableButton src.kv_screens.hoverablebutton
+
 <LS_Tab1>
     add_button:add_button.__self__
-    Button:
+    HoverableButton:
         id: add_button
         size_hint: (None, None)
         size: (130, 30)
