--- a/src/kv_style/ls_tab1.kv
+++ b/src/kv_style/ls_tab1.kv
@@ -6,6 +6,7 @@
         id: add_button
         size_hint: (None, None)
         size: (130, 30)
+        offset: 0, -50
         text: 'Connect to Chat'
         pos_hint: {'x': 0.01, 'y': 0.08}
         on_press:
