--- a/src/kv_style/tab1.kv
+++ b/src/kv_style/tab1.kv
@@ -46,6 +46,7 @@
                     HoverableButton:
                         size_hint: (None, None)
                         size: (130, 30)
+                        offset: 0, -50
                         text: 'Join'
                         background_color:[0,1,0,1]
                         pos_hint: {'x': 0.25, 'y': 20.01}
@@ -55,6 +56,7 @@
 
                     HoverableButton:
                         size_hint: (None, None)
+                        offset: 0, -50
                         size: (130, 30)
                         text: 'Create'
                         background_color:[0,1,0,1]
