--- a/src/kv_style/tab3.kv
+++ b/src/kv_style/tab3.kv
@@ -93,7 +93,7 @@
                                 size_hint: None, None
                                 size: dp(150), dp(50)
                                 offset: 0, -50
-                                transition_color: "grey"
+                                transition_color: "darkgrey"
                                 background_color: (0.1, 0.1, 0.1, 1)
                                 on_press:
                                     root.toggle_dropdown()
