leave chat button works as intended

--- a/src/kv_style/ls_tab1.kv
+++ b/src/kv_style/ls_tab1.kv
@@ -8,6 +8,7 @@
         size: (130, 30)
         offset: 0, -50
         text: 'Connect to Chat'
+        background_color: (0, 1, 0, 1)
         pos_hint: {'x': 0.01, 'y': 0.08}
         on_press:
             root.connect()
